# we-go-mars

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  mars_mission_questions.mmd  message.txt  pyproject.toml
data/: .gitkeep  README.md  SUMMARY.md
data/specs/dosimetry/: README.md
data/specs/radiation-shielding/: ADVANCED_SHIELDING_README.md  AI_BENCHMARK.md  CNSA_PROGRAMS.md  CSA_PROGRAMS.md  ESA_PLANNING.md  ESA_TENDERS.md  GRAND_CHALLENGES.md  ISRO_PROGRAMS.md  JAXA_PROGRAMS.md  MARS_MISSION_LESSONS.md  NASA_SOLICITATIONS.md  PLANNING.md  README.md  RESEARCH_OVERVIEW.md  ROSCOSMOS_PROGRAMS.md  SPACEX_PROGRAMS.md  SUPPLIERS.md  SYSTEM_SPEC.md
data/specs/system-engineering/: LLM_TREE_0_MISSION.md  LLM_TREE_0_MISSION_README.md  LLM_TREE_1_ENVIRONMENT.md  (+14 more)
scripts/: README.md  ingest_deep_research.py  ingest_knowledge_base.py
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  aggregator.py  atomicness_judge.py  base.py  deep_researcher.py  feasibility_judge.py  plan_forming.py  plan_synthesizer.py  proposer.py  requirement_decomposer.py  retriever.py  similarity_checker.py  solution_judge.py  suggestor.py
src/models/: __init__.py  hypothesis.py  requirement.py  research_plan.py  solution.py
src/orchestration/: __init__.py  tree_of_thoughts.py  voting.py  workflow.py
src/rag/: __init__.py  embeddings.py  literature_store.py  requirement_store.py  retrieval.py
src/scripts/: test_decompose.py  test_full_workflow.py  visualize_graph.py
src/utils/: __init__.py  logging.py
tests/: __init__.py  test_rag.py
(+9 files in other folders)
