[project]
name = "we-go-mars"
version = "0.1.0"
description = "AI-first science platform for hypothesis-driven research planning"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "agent-framework>=1.0.0b0",
    "openai>=1.12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "qdrant-client>=1.8.0",
    "tiktoken>=0.6.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "python-dotenv>=1.2.1",
    "fastembed>=0.4.0",
    "plotly>=5.18.0",
    "networkx>=3.2.0",
]

[project.scripts]
we-go-mars = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
